renamed `results` schema component into `processResults`
