# s2gos/common/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-06-22T18:08:57+00:00
+#   timestamp: 2025-06-22T18:18:00+00:00
 
 from __future__ import annotations
 
@@ -268,19 +268,33 @@ class ProcessRequest(BaseModel):
     subscriber: Optional[Subscriber] = None
 
 
-class Results(RootModel[Optional[dict[str, InlineOrRefData]]]):
+class ProcessResults(RootModel[Optional[dict[str, InlineOrRefData]]]):
     root: Optional[dict[str, InlineOrRefData]] = None
 
 
 class InlineResponse200(
     RootModel[
         Union[
-            str, float, int, dict[str, Any], list[dict[str, Any]], bool, bytes, Results
+            str,
+            float,
+            int,
+            dict[str, Any],
+            list[dict[str, Any]],
+            bool,
+            bytes,
+            ProcessResults,
         ]
     ]
 ):
     root: Union[
-        str, float, int, dict[str, Any], list[dict[str, Any]], bool, bytes, Results
+        str,
+        float,
+        int,
+        dict[str, Any],
+        list[dict[str, Any]],
+        bool,
+        bytes,
+        ProcessResults,
     ]
 
 
