# s2gos/server/service.py
@@ -1,6 +1,6 @@
 # generated by gen_server.py:
 #   filename:  service.py:
-#   timestamp: 2025-06-22T20:09:37.782003
+#   timestamp: 2025-06-22T20:18:13.691438
 
 from abc import ABC, abstractmethod
 
@@ -14,7 +14,7 @@ from s2gos.common.models import (
     ProcessDescription,
     ProcessList,
     ProcessRequest,
-    Results,
+    ProcessResults,
 )
 
 
@@ -24,7 +24,7 @@ class Service(ABC):
         pass
 
     @abstractmethod
-    async def get_conformance_classes(self) -> ConfClasses | JSONResponse:
+    async def get_conformance_classes(self) -> JSONResponse | ConfClasses:
         pass
 
     @abstractmethod
@@ -56,5 +56,5 @@ class Service(ABC):
         pass
 
     @abstractmethod
-    async def get_result(self, job_id: str) -> JSONResponse | Results:
+    async def get_result(self, job_id: str) -> JSONResponse | ProcessResults:
         pass
